--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -4,3 +4,25 @@
     width: 1000px;
     height: 500px;
 }
+
+/* .custom-marker {
+    width: 24px;
+    height: 24px;
+    background-color: #4285f4; 
+    border-radius: 50%;
+    position: relative;
+    transform: translateY(-50%);
+  }
+
+  .custom-marker::before {
+    content: '';
+    position: absolute;
+    top: 87%;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-top: 12px solid #4285f4; 
+    transform: translateX(-50%);
+  } */
