--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -30,7 +30,7 @@
 
 body {
     margin: 0;
-    background-color: #e1e1e1;
+    background-color: #f0ecec;
     font-family: "Nunito Sans", Arial, sans-serif;
 }
 
@@ -131,6 +131,8 @@ p.track-text {
     width: 100vh;
     height: 100vh;
     margin: auto;
+    position: relative;
+    bottom: 4vh;
     margin-top: 1px;
 }
 
@@ -143,7 +145,7 @@ p.track-text {
     position: absolute;
     top: 10vh;
     right: 1px;
-    margin-top: 30vh;
+    margin-top: 32vh;
     height: 80vh;
     width: 100%;    
     color: #fff; 
@@ -217,6 +219,8 @@ h2.track-h2 {
     text-align: center;
     width: 100%;
     font-size: 30px;
+    color: #770e77;
+    font-weight: 600;
 }
 
 p.track-package {
@@ -224,17 +228,15 @@ p.track-package {
     margin-top: 1px;
 }
 
-button {
+button.location-button {
     border-style: none;
     background-color: #770e77;
     padding: 12px 22px;
     text-align: center;
-    margin-top: 10px;
     border-radius: 5px;
     cursor: pointer;
     position: relative;
-    bottom: 10px;
-    margin-top: 15px;
+    bottom: 73vh;
     font-size: 16px;
     font-weight: 200;
     margin: auto;
@@ -245,14 +247,18 @@ button {
 }
 
 .track-package {
+    text-align: center;
+    width: 100vh;
+    margin: auto;
+    position: relative;
     margin-bottom: 20px;
 }
 
-button a {
+button.location-button a {
     color: #fff;
 }
 
-button:hover {
+button.location-button:hover {
     background-color: #a30ba3;
     transition: all 0.3s ease-in-out;
 }
@@ -261,4 +267,28 @@ div.map {
     max-height: fit-content;
     max-width: 100%;
     border-radius: 5px;
+    margin: auto;
+    margin-top: 10vh;
+}
+
+button.to-track {
+    position: absolute;
+    top: 35vh;
+    right: 92vh;
+    text-align: center;
+    border-style: none;
+    background-color: #770e77;
+    text-align: center;
+    font-size: 16px;
+    padding: 10px 20px;
+    border-radius: 5px;   
+}
+
+button.to-track a {
+    color: #fff;
+}
+
+button.to-track:hover {
+    transition: all 0.3s ease-in-out;
+    background-color: #a30ba3;
 }
