--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .map {
-    width: 1000px;
+    width: 100%;
     height: 500px;
 }
 
@@ -145,7 +145,7 @@ p.track-text {
     position: absolute;
     top: 10vh;
     right: 1px;
-    margin-top: 32vh;
+    margin-top: 34vh;
     height: 80vh;
     width: 100%;    
     color: #fff; 
@@ -235,8 +235,7 @@ button.location-button {
     text-align: center;
     border-radius: 5px;
     cursor: pointer;
-    position: relative;
-    bottom: 73vh;
+    bottom: 76vh;
     font-size: 16px;
     font-weight: 200;
     margin: auto;
@@ -268,7 +267,7 @@ div.map {
     max-width: 100%;
     border-radius: 5px;
     margin: auto;
-    margin-top: 10vh;
+    margin-top: 4vh;
 }
 
 button.to-track {
